<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:minWidth="500dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="?attr/color_primary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="?attr/color_base"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/KH.Text.Big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recall_title"
            android:textStyle="bold"/>


        <LinearLayout
            style="@style/KH.Shadow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/color_base"
                android:orientation="vertical"
                android:padding="10dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/KH.Text.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/recall_product"
                            android:textColor="?attr/color_contrast_true"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/item_name"
                            style="@style/KH.Text.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:textColor="?attr/color_contrast_true"/>

                        <TextView
                            android:id="@+id/company_name"
                            style="@style/KH.Text.Tiny"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:textColor="?attr/color_contrast_true"/>

                        <TextView
                            style="@style/KH.Text.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/recall_issue_date"
                            android:textColor="?attr/color_contrast_true"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/recall_isssue_date"
                            style="@style/KH.Text.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:textColor="?attr/color_contrast_true"/>

                        <TextView
                            style="@style/KH.Text.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/recall_description"
                            android:textColor="?attr/color_contrast_true"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/recall_description"
                            style="@style/KH.Text.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:textColor="?attr/color_contrast_true"/>

                        <TextView
                            style="@style/KH.Text.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/recall_danger"
                            android:textColor="?attr/color_contrast_true"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/recall_danger"
                            style="@style/KH.Text.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:textColor="?attr/color_contrast_true"/>

                        <TextView
                            style="@style/KH.Text.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/recall_instructions"
                            android:textColor="?attr/color_contrast_true"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/recall_instructions"
                            style="@style/KH.Text.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="5dp"
                            android:textColor="?attr/color_contrast_true"/>
                        ¨
                    </LinearLayout>
                </ScrollView>

                <Button
                    android:id="@+id/recall_button"
                    style="@style/KH.Text.Big"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="?attr/background_click_contrast"
                    android:padding="5dp"
                    android:text="@string/recall_button"
                    android:textColor="?attr/color_base_true"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>