<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:minWidth="400dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="?attr/color_primary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="?attr/color_base"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            style="@style/KH.Shadow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/color_base"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    style="@style/KH.Text.Huge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/warning"
                    android:textColor="?attr/color_contrast_true"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_error_red"/>

                <TextView
                    style="@style/KH.Text.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/recall_warn_top"
                    android:textColor="?attr/color_contrast_true"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/item_name"
                    style="@style/KH.Text.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/recall_warn_top"
                    android:textColor="?attr/color_contrast_true"/>

                <TextView
                    android:id="@+id/company_name"
                    style="@style/KH.Text.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/recall_warn_top"
                    android:textColor="?attr/color_contrast_true"/>


                <Button
                    android:id="@+id/recall_warn_button"
                    style="@style/KH.Text.Big"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="?attr/background_click_contrast"
                    android:padding="5dp"
                    android:text="@string/recall_warn_button"
                    android:textColor="?attr/color_base_true"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>